<resources>
    <string name="app_name">Caiguru</string>
    <string name="email_hint">enter your email id</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="password_hint">enter your password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="sumbit">Submit</string>
    <string name="resetPassword">Forgot Password?</string>
    <string name="please_enter">Please Enter your email to get new Password.</string>
    <string name="or">or</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login_With_facebook">Login with facebook</string>
    <string name="enter_information">Please enter your information</string>
    <string name="name">Name</string>
    <string name="dialogName">Name</string>
    <string name="address">Update your address</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referal_code">Referral Code (Optional) </string>
    <string name="enter_referal_code">enter referral code</string>
    <string name="next_button">Next</string>
    <string name="Please_wait">Please Wait..</string>
    <string name="already_account">Already have an account?</string>
    <string name="login_button">Login</string>
    <string name="Enter_your_email">enter your email id</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_phone_no">enter your phone no.</string>
    <string name="Enter_password">enter password</string>
    <string name="Enter_password_again">enter password again</string>
    <string name="choose_category">Choose Category</string>
    <string name="home_screen_title">Home</string>
    <string name="head_text">Please, select at least 3 categories you\'d like to follow.</string>
    <string name="finish">Finish</string>
    <string name="createList">Create List</string>
    <string name="Drinks"> drinks</string>
    <string name="babies">babies</string>
    <string name="Bakery">bakery</string>
    <string name="gluten_free_products">gluten free products</string>
    <string name="Cleaning_supplies">cleaning supplies</string>
    <string name="Clothes">clothes</string>
    <string name="Cold_cuts_dairy">cold cuts &amp; dairy</string>
    <string name="Condiments_oils_sauces">condiments, oils &amp; sauces</string>
    <string name="Construction">construction</string>
    <string name="Fruits_vegetables">fruits &amp; vegetables</string>
    <string name="Grocery">grocery</string>
    <string name="Hardware_store">hardware store</string>
    <string name="Health_beauty">health &amp; beauty</string>
    <string name="health_natural_food">health natural food</string>
    <string name="Home_kitchen">home &amp; kitchen</string>
    <string name="Meat_chicken_fish">meat, chicken &amp; fish</string>
    <string name="Non_alcoholic_drinks">non-alcoholic drinks</string>
    <string name="Office_stationery">office &amp; stationery</string>
    <string name="Pasta_legumes_cereals">pasta, legumes &amp; cereals</string>
    <string name="Pets">pets</string>
    <string name="Pharmacy">pharmacy</string>
    <string name="Sports_fitness">sports &amp; fitness</string>
    <string name="Sweets_snacks">sweets &amp; snacks</string>
    <string name="Toys_kids">toys &amp; kids</string>
    <string name="Vegan">vegan</string>
    <string name="Please_Enter_The_Name">Please enter the name</string>
    <string name="Please_Enter_The_Email">Please enter the Email</string>
    <string name="Please_Enter_The_Password">Please enter the Password</string>
    <string name="Please_Enter_The_Confirm_Password">Please enter the Confirm Password</string>
    <string name="Please_Enter_The_Correct_password">Password Does Not Match Try Again</string>
    <string name="Enter_the_Valid_Email">Enter the Valid Email</string>
    <string name="Please_select_At_Least_3">Please select atleast three category</string>
    <string name="switch_to_seller">Switch to seller</string>
    <string name="switch_to_buyer">Switch to buyer</string>
    <string name="active">Active (your shopping lists are now visible.)</string>
    <string name="inactive">Inactive(your shopping lists are not visible.)</string>
    <string name="facebook_app_id">745835199195824</string>
    <string name="fb_login_protocol_scheme">fb745835199195824</string>
    <string name="switch_alert_title">Switch to Seller?</string>
    <string name="switch_alert_title_buyer">Switch to Buyer?</string>
    <string name="switch_alert_des">If you want to sell, you can switch to a seller
account. You’ll be able to come back to buyer mode in any moment</string>
    <string name="switch_alert_des_buyer">You are about to switch to your Buyer profile. You may switch back as a Guru anytime you want.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="network_error">Network Error Please Check Your Network</string>
    <string name="Done">Done</string>
    <string name="Seller_category_heading">*Please select one category for your shopping list</string>
    <string name="Name_of_The_list">Name of the list</string>
    <string name="Name">Name</string>
    <string name="Category">Category</string>
    <string name="Delivery_Time">Delivery Time</string>
    <string name="Delivery_Zone">Delivery Zone</string>
    <string name="pickup_information">Pickup Information (Optional)</string>
    <string name="pickup_information_heading">*Only those users who don\'t live in your delivery zone can opt for this service.  </string>
    <string name="choose_Delivery_zone">Choose delivery zone in the map</string>
    <string name="Days_And_Time_Pick">What days and time can users pickup the products</string>
    <string name="Minimun_purchase_amount">Minimun purchase amount</string>
    <string name="Write_a_minimun_purchase_amount">Enter a minimun purchase amount</string>
    <string name="Product_of_your_shopping_list">Product of your shopping list</string>
    <string name="Post_Shopping_List">Post Shopping List</string>
    <string name="Choose_the_Delivery_Zone">Choose the Delivery Address</string>
    <string name="Delivery_Zone_choose">Choose the Delivery Zone</string>
    <string name="updated_address">Update Address</string>
    <string name="Your_Comission">Your Commissions :</string>
    <string name="Add_more_product">Add more product</string>
    <string name="Unit_of_measurement">Unit of measurement</string>
    <string name="view_on_map">View on Map</string>
    <string name="Price">Price</string>
    <string name="Upload_photo">Upload photo</string>
    <string name="delete">Delete</string>
    <string name="time_intervals_heading_text">Please select the time intervals for the days you can provide delivery on.</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thusday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Select_Days_and_Time">Select Days and Time</string>
    <string name="Timeinterval">Time Interval</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Add_Product_Details">Add Product Details</string>
    <string name="Add_address_Details">Enter the address where you want to view the lists for</string>
    <string name="Please_select_address_Details">Please provide your address</string>
    <string name="Add">Add</string>
    <string name="Please_Enter_The_Unit_Of_Measurement">Please enter the Unit Of Measurement</string>
    <string name="Please_Enter_The_Price">Please enter the Price</string>
    <string name="Please_select_The_Image">Please select the image</string>
    <string name="Product">products</string>
    <string name="done">Done</string>
    <string name="Add_product">Add product</string>
    <string name="Please_Enter_Name_Of_The_List">Please Enter Name Of The List</string>
    <string name="Please_Select_Category">Please Select Category</string>
    <string name="Please_Select_Your_Location">Please select atleast 1 delivery zone</string>
    <string name="Please_Select_Time_Zone">Please Select Time Zone</string>
    <string name="Please_Enter_Minimum_Purchase">Please Enter Minimum Purchase</string>
    <string name="Please_Select_Comission">Please Select Your Commission</string>
    <string name="Please_Add_Your_Product">Please Add Your Product</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter valid Email</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_confirm_password">Enter your confirm password</string>
    <string name="ok">Ok</string>
    <string name="Your_shopping_list_has_been_created_sucessfully">Your shopping list has been created successfully.</string>
    <string name="Shopping_list_name">SHOPPING LIST NAME</string>
    <string name="Shopping_list_posted">Shopping List Posted</string>
    <string name="Closed_List">Closed Lists</string>
    <string name="open_again">Open again</string>
    <string name="open_list">Open Lists</string>
    <string name="shopping_list">Lists</string>
    <string name="shoppings_list">shopping list</string>
    <string name="close">Close</string>
    <string name="modify">Modify</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="Comission">Commission</string>
    <string name="Data_is_incompleted">Data is incompleted..</string>
    <string name="Please_select_the_time_in_from">Please select the time in from</string>
    <string name="buyerposttext">(A seller will buy the products for you and send them to you)</string>
    <string name="No_Data_Reload">No Data...</string>
    <string name="activate">Activate</string>
    <string name="dilog_active_text">You are currently inactive, activating your account will show your open lists to all the users.</string>
    <string name="dilog_active_text_button">Active</string>
    <string name="inactivated">Inactivate</string>
    <string name="dilog_inactive_text">You are currently active, inactivating your account will hide your open lists to all the users.</string>
    <string name="dilog_inactive_text_button">Inactive</string>
    <string name="alert">Alert</string>
    <string name="Settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="Submit">Submit</string>
    <string name="Provide_your_reason">Provide your reason</string>
    <string name="Enter_Refute_Message">Enter Refute Message</string>
    <string name="Retry">Retry</string>
    <string name="Whoops">Whoops!</string>
    <string name="no_internet_Found">No internet connection found. Check your connection and try again.</string>
    <string name="actives">Active</string>
    <string name="post">Auction</string>
    <string name="lists">Lists</string>
    <string name="oopsText">Opps! Nothing here...</string>
    <string name="no_list_at_the_moment">No list available at the moment</string>
    <string name="switch_alert_title_seller">Switch to Seller?</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="in_which_language_do_you_want_to_open_the_link">In which language do you want to open the link?</string>
    <string name="are_you_sure_you_want_to_delivered_this_shopping_list">Are you sure that you have already delivered the products to client?</string>
</resources>