<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical">

    <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_horizontal"
            android:text="@string/switch_alert_title_seller"
            android:textColor="@color/purple"
            android:textSize="20sp" />

    <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/switch_alert_des"
            android:textColor="@color/hard_grey"
            android:textSize="13sp" />

    <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_grey" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/hard_grey"
                android:textSize="14sp" />

        <View
                android:layout_width=".5dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@color/light_grey" />

        <TextView
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/hard_grey"
                android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>