<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/bg_dialog"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/hard_grey"
            android:textSize="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/in_which_language_do_you_want_to_open_the_link" />

    <View
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/light_grey"
            android:layout_height=".5dp" />


    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:gravity="center"
                android:id="@+id/yes"
                android:text="@string/english"
                android:textColor="@color/hard_grey"
                android:fontFamily="@font/montserrat_medium"
                android:layout_weight="1"
                android:textSize="14dp"
                android:layout_height="match_parent" />

        <View
                android:layout_width=".5dp"
                android:background="@color/light_grey"
                android:layout_gravity="center"
                android:layout_height="60dp" />

        <TextView
                android:layout_width="0dp"
                android:text="@string/spanish"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14dp"
                android:id="@+id/no"
                android:textColor="@color/hard_grey"
                android:fontFamily="@font/montserrat_medium"
                android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>