<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/productheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/Provide_your_reason"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="18dp" />


            <EditText
                    android:id="@+id/edtReason"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/headingReason"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/curve_rectangle_category_grey"
                    android:gravity="start"
                    android:hint="@string/Enter_Refute_Message"
                    android:padding="10dp"
                    android:textSize="14dp"
                    android:inputType="textCapSentences"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/medium_grey"
                    android:textAlignment="viewStart" />

            <Button
                    android:id="@+id/SubmitBtn"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/rectangle_curve_loginbutton"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/Submit"
                    android:textAllCaps="false"
                    android:visibility="visible"
                    android:textColor="@color/purple"
                    android:textSize="14dp" />
            <Button
                    android:id="@+id/waitBtn"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/rectangle_curve_loginbutton"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/Please_wait"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:textColor="@color/purple"
                    android:textSize="14dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>
